[gd_scene load_steps=19 format=3 uid="uid://coepv2rclc5ht"]

[ext_resource type="Texture2D" uid="uid://bptjxvgwy7m75" path="res://untitled.bmp" id="1_54ihp"]
[ext_resource type="Script" path="res://fight.gd" id="1_rcvij"]
[ext_resource type="AudioStream" uid="uid://bhn0yfds43sfb" path="res://atac.mp3" id="2_v4f1p"]
[ext_resource type="Texture2D" uid="uid://uo4x11u603cg" path="res://green.png" id="3_1w4ri"]
[ext_resource type="AudioStream" uid="uid://csaytqyjj87xc" path="res://win.mp3" id="3_j1knf"]
[ext_resource type="AudioStream" uid="uid://b1qg6i5tcl03v" path="res://mort.mp3" id="4_2v6nh"]
[ext_resource type="Texture2D" uid="uid://cybs6qxa6y725" path="res://black.bmp" id="5_3g2u2"]
[ext_resource type="Script" path="res://StaticBody2D.gd" id="5_ewjfb"]
[ext_resource type="Texture2D" uid="uid://cjm4qg6a6foln" path="res://PlayerSpriteSheet.png" id="6_pyl4l"]
[ext_resource type="VideoStream" path="res://0001-0480.ogv" id="7_alwig"]
[ext_resource type="AudioStream" uid="uid://d26n0rl7v1ep" path="res://fire.mp3" id="7_swrvr"]
[ext_resource type="AudioStream" uid="uid://ceeipbrpiurm" path="res://move.mp3" id="8_mfkds"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jail6"]
size = Vector2(646.364, 18.6364)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_q5b71"]
a = Vector2(-27.2727, -48.1818)
b = Vector2(-27.2727, 161.818)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_uedq8"]
a = Vector2(609.091, 161.818)
b = Vector2(-27.2727, 161.818)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_0bnux"]
a = Vector2(605.455, -46.3636)
b = Vector2(605.455, 167.273)

[sub_resource type="GDScript" id="GDScript_lwb1d"]
script/source = "extends CharacterBody2D

var pathfile=\"res://var.txt\"
var SPEED = 0
const JUMP_VELOCITY = -400.0
var checkopen1=0
var sword=0
var posx=0
var posy=0
var armor=0
var checkopen2=0
var healing=0
var checkopen3=0
var health = 100
# Get the gravity from the project settings to be synced with RigidBody nodes.
var gravity = ProjectSettings.get_setting(\"physics/2d/default_gravity\")

func _ready():
	load_data()
	
func _physics_process(delta):
	
	if Input.is_action_just_pressed(\"ui_accept\") and is_on_floor():
		velocity.y = JUMP_VELOCITY
	# Get the input direction and handle the movement/deceleration.
	# As good practice, you should replace UI actions with custom gameplay actions.
	var direction = Input.get_axis(\"ui_left\", \"ui_right\")
	if direction:
		velocity.x = direction * SPEED
	else:
		velocity.x = move_toward(velocity.x, 0, SPEED)

	var direction1 = Input.get_axis(\"ui_up\", \"ui_down\")
	if direction1:
		velocity.y = direction1 * SPEED
	else:
		velocity.y = move_toward(velocity.x, 0, SPEED)
	move_and_slide()
	
	
func attack_start():
	visible=true
	SPEED=300

	return \"attack_pattern\"
	
func attack_end():
	
	visible=false
	SPEED=0
	position.x=466
	position.y=390
	
func load_data():
	if FileAccess.file_exists(pathfile):
		var file=FileAccess.open(pathfile,FileAccess.READ)
		checkopen1=file.get_var()
		sword=file.get_var()
		posx=file.get_var()
		posy=file.get_var()
		armor=file.get_var()
		checkopen2=file.get_var()
		healing=file.get_var()
		checkopen3=file.get_var()
	
func ceva():
	if armor ==1 :
		health=health-15
		return health
	else:
		health=health-30
		return health
	
func checkSpeed():
	if velocity.x==0 and velocity.y==0:
		print(\"ceva\")
		return 0
	else:
		return 1
func checkHealth():
	return health


"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_dviqi"]

[node name="Node2D" type="Node2D"]
position = Vector2(17, -16)
scale = Vector2(1.1, 1.1)
script = ExtResource("1_rcvij")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
z_index = 2
custom_minimum_size = Vector2(20, 0)
layout_direction = 2
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 379.091
offset_top = 520.0
offset_right = 484.091
offset_bottom = 551.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.2, 2.2)
size_flags_vertical = 8
focus_neighbor_left = NodePath("Button")
focus_neighbor_top = NodePath("Button")
focus_neighbor_right = NodePath("Button2")
focus_neighbor_bottom = NodePath("Button2")
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="HBoxContainer"]
modulate = Color(0.94902, 0, 0.215686, 1)
self_modulate = Color(0.976471, 0.976471, 0.976471, 1)
layout_mode = 2
text = "Attack"
alignment = 0

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(34, 0)
layout_mode = 2
text = "Heal"

[node name="atac" type="AudioStreamPlayer2D" parent="HBoxContainer"]
stream = ExtResource("2_v4f1p")
volume_db = 9.377

[node name="win" type="AudioStreamPlayer" parent="HBoxContainer"]
stream = ExtResource("3_j1knf")
volume_db = 4.0

[node name="mort" type="AudioStreamPlayer" parent="HBoxContainer"]
stream = ExtResource("4_2v6nh")
volume_db = 3.0

[node name="Untitled" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(505.455, 330.909)
texture = ExtResource("1_54ihp")

[node name="Dragon2" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(494.545, 133.636)
scale = Vector2(0.5, 0.485)
texture = ExtResource("3_1w4ri")

[node name="Black" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(508.182, 388.182)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_3g2u2")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(97.2727, 333.636)
script = ExtResource("5_ewjfb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 3
position = Vector2(393.636, -53.6364)
shape = SubResource("RectangleShape2D_jail6")
debug_color = Color(0.160784, 0.517647, 1, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 3
position = Vector2(100, 4.54545)
shape = SubResource("SegmentShape2D_q5b71")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 3
position = Vector2(100, 5.45455)
shape = SubResource("SegmentShape2D_uedq8")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 3
position = Vector2(106.364, 0.909091)
shape = SubResource("SegmentShape2D_0bnux")

[node name="ball" type="AudioStreamPlayer2D" parent="StaticBody2D"]
stream = ExtResource("7_swrvr")
volume_db = 5.0
pitch_scale = 1.59

[node name="move" type="AudioStreamPlayer2D" parent="StaticBody2D"]
stream = ExtResource("8_mfkds")
volume_db = 3.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
visible = false
z_index = 1
position = Vector2(466.364, 390)
script = SubResource("GDScript_lwb1d")

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("CapsuleShape2D_dviqi")

[node name="Sprite2D" type="Sprite2D" parent="CharacterBody2D"]
scale = Vector2(2, 2)
texture = ExtResource("6_pyl4l")
hframes = 48

[node name="Label" type="Label" parent="."]
z_index = 3
offset_left = 120.0
offset_top = 525.455
offset_right = 160.0
offset_bottom = 548.455

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 3
offset_left = 50.0
offset_top = 555.0
offset_right = 300.0
offset_bottom = 582.0
theme_override_colors/font_color = Color(0, 0.721569, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 1, 1)
fill_mode = 1
show_percentage = false

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
z_index = 4
offset_left = -778.0
offset_top = 6.0
offset_right = 1814.0
offset_bottom = 604.0
ratio = 2.0

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="AspectRatioContainer"]
z_index = 4
layout_mode = 2
stream = ExtResource("7_alwig")
expand = true

[node name="Label2" type="Label" parent="."]
offset_left = 162.0
offset_top = 238.0
offset_right = 412.0
offset_bottom = 261.0

[node name="ProgressBar2" type="ProgressBar" parent="."]
z_index = 6
offset_left = 201.0
offset_top = 257.0
offset_right = 782.0
offset_bottom = 284.0
fill_mode = 1
show_percentage = false

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button" to="CharacterBody2D" method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="finished" from="AspectRatioContainer/VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
